gcc/testsuite/rust/rustc/ui/parser/recover-assoc-eq-missing-term.rs
#[cfg(FALSE)]
fn syntax() {
    bar::<Item =   >(); // { dg-error "" "" { target *-*-* } }
}

fn main() {}

